--- a/arbol.html
+++ b/arbol.html
@@ -32,6 +32,7 @@
           </button>
           <br />
           <button onclick="añadirRama()">AÑADIR RAMA</button>
+          <button onclick="calcular()">Calcular</button>
         </section>
 
       </div>
