--- a/arbol.html
+++ b/arbol.html
@@ -30,9 +30,14 @@
           >
             -
           </button>
-          <br />
+          <br /><br>
           <button onclick="añadirRama()">AÑADIR RAMA</button>
+          <br><br>
           <button onclick="calcular()">Calcular</button>
+          <br><br>
+          <label for="campo" >RESPUESTA :</label >
+          <br>
+          <p id="respuesta">-</p>
         </section>
 
       </div>
