--- a/arbol.html
+++ b/arbol.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tu Página</title>
+    <title>ARBOL DE DECISIONES</title>
     <link rel="stylesheet" href="arbol.css" />
   </head>
   <body>
